--- a/siam.cbp
+++ b/siam.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+                    <Add library="alleg44.dll" />				
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/siam" prefix_auto="1" extension_auto="1" />
@@ -25,6 +28,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+                    <Add library="alleg44.dll" />				
 				</Linker>
 			</Target>
 		</Build>
