--- a/siam.cbp
+++ b/siam.cbp
@@ -14,9 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add library="alleg44.dll" />				
-				</Linker>
+              <Linker>
+                  <Add library="alleg44.dll" />
+              </Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/siam" prefix_auto="1" extension_auto="1" />
@@ -28,7 +28,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="alleg44.dll" />				
+                  <Add library="alleg44.dll" />
 				</Linker>
 			</Target>
 		</Build>
@@ -39,9 +39,14 @@
 			<Add option="-Wextra" />
 			<Add option="-std=c++11" />
 		</Compiler>
+		<Unit filename="affichable.cpp" />
+		<Unit filename="affichable.h" />
 		<Unit filename="console.cpp" />
 		<Unit filename="console.h" />
+		<Unit filename="helloworld.cpp" />
+		<Unit filename="helloworld.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="siam.cbp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
