--- a/siam.cbp
+++ b/siam.cbp
@@ -9,7 +9,7 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/siam" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type= "1" />
+				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
@@ -46,6 +46,8 @@
 		<Unit filename="helloworld.cpp" />
 		<Unit filename="helloworld.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="plateau.cpp" />
+		<Unit filename="plateau.h" />
 		<Unit filename="siam.cbp" />
 		<Extensions>
 			<code_completion />
